[gd_scene load_steps=29 format=3 uid="uid://tge2of72lajn"]

[ext_resource type="Texture2D" uid="uid://blptonyadgl71" path="res://assets/images/galaxy.jpg" id="1_e413w"]
[ext_resource type="Script" path="res://scripts/camera_2d.gd" id="1_iulga"]
[ext_resource type="Script" path="res://scripts/simulation.gd" id="2_4dgcl"]
[ext_resource type="PackedScene" uid="uid://c2i3ycaqd1wk1" path="res://scenes/planet.tscn" id="3_77pxh"]
[ext_resource type="PackedScene" uid="uid://dljsrgyen4y25" path="res://scenes/vehicle.tscn" id="4_3i4c4"]
[ext_resource type="Texture2D" uid="uid://j1ofmu2fcxh7" path="res://assets/images/planets/mercury.svg" id="4_4owhv"]
[ext_resource type="Texture2D" uid="uid://bumok1yfal6yg" path="res://assets/images/planets/neptune.svg" id="4_dtjij"]
[ext_resource type="Texture2D" uid="uid://b8himp546tcbv" path="res://assets/images/planets/sun.svg" id="5_3hq6x"]
[ext_resource type="Script" path="res://scripts/components/zoom.gd" id="5_7lark"]
[ext_resource type="Texture2D" uid="uid://b18aei5xrskp0" path="res://assets/images/planets/venus.svg" id="5_cnaoo"]
[ext_resource type="Texture2D" uid="uid://c12ocwknw2fb" path="res://assets/images/planets/earth2.svg" id="6_3ftto"]
[ext_resource type="Texture2D" uid="uid://30bebjyjvgdt" path="res://assets/images/planets/mars2.svg" id="7_57qao"]
[ext_resource type="Script" path="res://scripts/router/mission.gd" id="7_82i05"]
[ext_resource type="Script" path="res://scripts/router/game.gd" id="8_v4xeu"]
[ext_resource type="Texture2D" uid="uid://da0p7pbval3tu" path="res://assets/images/planets/jupiter2.svg" id="8_xtdlo"]
[ext_resource type="Script" path="res://scripts/state_machine.gd" id="9_1876u"]
[ext_resource type="Texture2D" uid="uid://b7wfdwra6p518" path="res://assets/images/planets/saturn2.svg" id="9_oqo0b"]
[ext_resource type="PackedScene" uid="uid://dsprrkrsjlyw6" path="res://scenes/ui_control.tscn" id="9_yyfp1"]
[ext_resource type="Texture2D" uid="uid://b2qqj5fawf11q" path="res://assets/images/planets/uranus.svg" id="10_0kv28"]
[ext_resource type="Texture2D" uid="uid://by0sl3ep4o4xx" path="res://assets/images/planets/moon.svg" id="10_4b0w6"]
[ext_resource type="Script" path="res://scripts/router/home.gd" id="10_dxws8"]
[ext_resource type="Texture2D" uid="uid://bcsjqm45prmrw" path="res://assets/images/planets/europa.svg" id="11_7jbma"]
[ext_resource type="Script" path="res://scripts/router/lobby.gd" id="11_g0oy0"]
[ext_resource type="PackedScene" uid="uid://ckrpxxli32moi" path="res://scenes/game_control.tscn" id="11_o1cve"]
[ext_resource type="Texture2D" uid="uid://doc1cn2malxbl" path="res://assets/images/planets/titan.svg" id="12_7svse"]
[ext_resource type="PackedScene" uid="uid://co1lv1gn71owu" path="res://scenes/asteroid.tscn" id="15_361dc"]
[ext_resource type="Script" path="res://scripts/router/leaderboard.gd" id="24_150wo"]
[ext_resource type="Script" path="res://scripts/database.gd" id="26_lotpi"]

[node name="Main2D" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
visible = false
modulate = Color(1, 1, 1, 0.243137)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_e413w")
expand_mode = 1

[node name="Camera2D" type="Camera2D" parent="." node_paths=PackedStringArray("follow") groups=["camera"]]
process_mode = 3
ignore_rotation = false
enabled = false
process_callback = 0
limit_smoothed = true
position_smoothing_enabled = true
rotation_smoothing_enabled = true
editor_draw_limits = true
script = ExtResource("1_iulga")
multiplier = 512
follow = NodePath("../Game/Vehicle")

[node name="Game" type="Node2D" parent="." node_paths=PackedStringArray("camera", "database") groups=["simulation"]]
script = ExtResource("2_4dgcl")
camera = NodePath("../Camera2D")
database = NodePath("../Database")

[node name="WinTimer" type="Timer" parent="Game"]
wait_time = 3.0
one_shot = true

[node name="Trajectories" type="Node2D" parent="Game"]

[node name="Planets" type="Node2D" parent="Game"]

[node name="Sun" parent="Game/Planets" instance=ExtResource("3_77pxh")]
mass = 2.74e+06
freeze = true
surface_gravity = 274.0
radius = 1000.0

[node name="Sprite2D" type="Sprite2D" parent="Game/Planets/Sun"]
scale = Vector2(2.31406, 2.27191)
texture = ExtResource("5_3hq6x")

[node name="Sprite2D2" type="Sprite2D" parent="Game/Planets/Sun"]
scale = Vector2(2.31406, 2.27191)
texture = ExtResource("5_3hq6x")

[node name="Zoom" type="Node2D" parent="Game/Planets/Sun" node_paths=PackedStringArray("sprite")]
script = ExtResource("5_7lark")
sprite = NodePath("../Sprite2D2")
threshold = 0.016
multiplier = 0.028

[node name="Asteroid" parent="Game/Planets/Sun" instance=ExtResource("15_361dc")]
position = Vector2(43264, 0)

[node name="Asteroid2" parent="Game/Planets/Sun" instance=ExtResource("15_361dc")]
position = Vector2(-43264, 0)

[node name="Asteroid3" parent="Game/Planets/Sun" instance=ExtResource("15_361dc")]
position = Vector2(0, -43264)

[node name="Asteroid4" parent="Game/Planets/Sun" instance=ExtResource("15_361dc")]
position = Vector2(0, 43264)

[node name="Asteroid5" parent="Game/Planets/Sun" instance=ExtResource("15_361dc")]
position = Vector2(-35584, 30976)

[node name="Asteroid6" parent="Game/Planets/Sun" instance=ExtResource("15_361dc")]
position = Vector2(32000, -32896)

[node name="Asteroid7" parent="Game/Planets/Sun" instance=ExtResource("15_361dc")]
position = Vector2(-29184, -30592)

[node name="Asteroid8" parent="Game/Planets/Sun" instance=ExtResource("15_361dc")]
position = Vector2(-36096, 13056)

[node name="Asteroid9" parent="Game/Planets/Sun" instance=ExtResource("15_361dc")]
position = Vector2(-39680, 21632)

[node name="Asteroid10" parent="Game/Planets/Sun" instance=ExtResource("15_361dc")]
position = Vector2(-42240, -19968)

[node name="Asteroid11" parent="Game/Planets/Sun" instance=ExtResource("15_361dc")]
position = Vector2(-40320, -8704)

[node name="Asteroid12" parent="Game/Planets/Sun" instance=ExtResource("15_361dc")]
position = Vector2(-44544, -10624)

[node name="Asteroid13" parent="Game/Planets/Sun" instance=ExtResource("15_361dc")]
position = Vector2(-16768, -31744)

[node name="Asteroid14" parent="Game/Planets/Sun" instance=ExtResource("15_361dc")]
position = Vector2(-12928, -40576)

[node name="Asteroid15" parent="Game/Planets/Sun" instance=ExtResource("15_361dc")]
position = Vector2(15104, -41984)

[node name="Asteroid16" parent="Game/Planets/Sun" instance=ExtResource("15_361dc")]
position = Vector2(25344, -40704)

[node name="Asteroid17" parent="Game/Planets/Sun" instance=ExtResource("15_361dc")]
position = Vector2(36864, -21888)

[node name="Asteroid18" parent="Game/Planets/Sun" instance=ExtResource("15_361dc")]
position = Vector2(36541, -11986)

[node name="Asteroid19" parent="Game/Planets/Sun" instance=ExtResource("15_361dc")]
position = Vector2(44937, -17368)

[node name="Asteroid20" parent="Game/Planets/Sun" instance=ExtResource("15_361dc")]
position = Vector2(30083, -26625)

[node name="Asteroid21" parent="Game/Planets/Sun" instance=ExtResource("15_361dc")]
position = Vector2(41923, -28993)

[node name="Asteroid22" parent="Game/Planets/Sun" instance=ExtResource("15_361dc")]
position = Vector2(20934, -36527)

[node name="Asteroid23" parent="Game/Planets/Sun" instance=ExtResource("15_361dc")]
position = Vector2(-8250, -37787)

[node name="Asteroid24" parent="Game/Planets/Sun" instance=ExtResource("15_361dc")]
position = Vector2(-24503, -37356)

[node name="Asteroid25" parent="Game/Planets/Sun" instance=ExtResource("15_361dc")]
position = Vector2(41120, 12174)

[node name="Asteroid26" parent="Game/Planets/Sun" instance=ExtResource("15_361dc")]
position = Vector2(35232, 16142)

[node name="Asteroid27" parent="Game/Planets/Sun" instance=ExtResource("15_361dc")]
position = Vector2(42272, 22926)

[node name="Asteroid28" parent="Game/Planets/Sun" instance=ExtResource("15_361dc")]
position = Vector2(33696, 29326)

[node name="Asteroid29" parent="Game/Planets/Sun" instance=ExtResource("15_361dc")]
position = Vector2(24992, 37006)

[node name="Asteroid30" parent="Game/Planets/Sun" instance=ExtResource("15_361dc")]
position = Vector2(17696, 42382)

[node name="Asteroid31" parent="Game/Planets/Sun" instance=ExtResource("15_361dc")]
position = Vector2(37536, 34830)

[node name="Asteroid32" parent="Game/Planets/Sun" instance=ExtResource("15_361dc")]
position = Vector2(43168, 29198)

[node name="Asteroid33" parent="Game/Planets/Sun" instance=ExtResource("15_361dc")]
position = Vector2(27936, 40718)

[node name="Asteroid34" parent="Game/Planets/Sun" instance=ExtResource("15_361dc")]
position = Vector2(-14903, 42004)

[node name="Asteroid35" parent="Game/Planets/Sun" instance=ExtResource("15_361dc")]
position = Vector2(-28983, 36756)

[node name="Asteroid36" parent="Game/Planets/Sun" instance=ExtResource("15_361dc")]
position = Vector2(-29495, 27668)

[node name="Asteroid37" parent="Game/Planets/Sun" instance=ExtResource("15_361dc")]
position = Vector2(-43575, 11156)

[node name="Mercury" parent="Game/Planets" node_paths=PackedStringArray("orbit_to") instance=ExtResource("3_77pxh")]
position = Vector2(5154, 0)
mass = 370.0
linear_velocity = Vector2(0, 230)
surface_gravity = 3.7
radius = 100.0
orbit_to = [NodePath("../Sun")]

[node name="Sprite2D" type="Sprite2D" parent="Game/Planets/Mercury"]
position = Vector2(0.500134, -2.86102e-06)
scale = Vector2(0.160157, 0.160937)
texture = ExtResource("4_4owhv")

[node name="Sprite2D2" type="Sprite2D" parent="Game/Planets/Mercury"]
position = Vector2(0.500134, -2.86102e-06)
scale = Vector2(0.160157, 0.160937)
texture = ExtResource("4_4owhv")

[node name="Zoom" type="Node2D" parent="Game/Planets/Mercury" node_paths=PackedStringArray("sprite")]
script = ExtResource("5_7lark")
sprite = NodePath("../Sprite2D2")
threshold = 0.125
multiplier = 0.008

[node name="Venus" parent="Game/Planets" node_paths=PackedStringArray("orbit_to") instance=ExtResource("3_77pxh")]
position = Vector2(12513, 0)
mass = 6488.1
linear_velocity = Vector2(0, 150)
surface_gravity = 8.9
radius = 270.0
orbit_to = [NodePath("../Sun")]

[node name="Sprite2D" type="Sprite2D" parent="Game/Planets/Venus"]
position = Vector2(2.25, 1)
scale = Vector2(0.442578, 0.442187)
texture = ExtResource("5_cnaoo")

[node name="Sprite2D2" type="Sprite2D" parent="Game/Planets/Venus"]
position = Vector2(2.25, 1)
scale = Vector2(0.442578, 0.442187)
texture = ExtResource("5_cnaoo")

[node name="Zoom" type="Node2D" parent="Game/Planets/Venus" node_paths=PackedStringArray("sprite")]
script = ExtResource("5_7lark")
sprite = NodePath("../Sprite2D2")
threshold = 0.063
multiplier = 0.014

[node name="Earth" parent="Game/Planets" node_paths=PackedStringArray("orbit_to") groups=["source"] instance=ExtResource("3_77pxh")]
position = Vector2(21975, 0)
mass = 6125.0
linear_velocity = Vector2(0, 115)
radius = 250.0
orbit_to = [NodePath("../Sun")]

[node name="Sprite2D" type="Sprite2D" parent="Game/Planets/Earth"]
position = Vector2(-1.99961, -1.50003)
scale = Vector2(0.414063, 0.410156)
texture = ExtResource("6_3ftto")

[node name="Sprite2D2" type="Sprite2D" parent="Game/Planets/Earth"]
modulate = Color(1, 1, 1, 0)
position = Vector2(-1.99961, -1.50003)
scale = Vector2(0.414063, 0.410156)
texture = ExtResource("6_3ftto")

[node name="Zoom" type="Node2D" parent="Game/Planets/Earth" node_paths=PackedStringArray("sprite")]
script = ExtResource("5_7lark")
sprite = NodePath("../Sprite2D2")
threshold = 0.031
multiplier = 0.016

[node name="Asteroid" parent="Game/Planets/Earth" instance=ExtResource("15_361dc")]
position = Vector2(2949, -1743)

[node name="Asteroid2" parent="Game/Planets/Earth" instance=ExtResource("15_361dc")]
position = Vector2(-3651, -2952)

[node name="Asteroid3" parent="Game/Planets/Earth" instance=ExtResource("15_361dc")]
position = Vector2(-1872, 1997)

[node name="Moon" parent="Game/Planets" node_paths=PackedStringArray("orbit_to") instance=ExtResource("3_77pxh")]
position = Vector2(23616, 0)
mass = 262.0
surface_gravity = 2.62
radius = 100.0
orbit_to = [NodePath("../Earth"), NodePath("../Sun")]

[node name="Sprite2D" type="Sprite2D" parent="Game/Planets/Moon"]
position = Vector2(-0.00195312, 7.62939e-06)
scale = Vector2(0.160052, 0.166942)
texture = ExtResource("10_4b0w6")

[node name="Sprite2D2" type="Sprite2D" parent="Game/Planets/Moon"]
position = Vector2(-0.00195312, 7.62939e-06)
scale = Vector2(0.160052, 0.166942)
texture = ExtResource("10_4b0w6")

[node name="Zoom" type="Node2D" parent="Game/Planets/Moon" node_paths=PackedStringArray("sprite")]
script = ExtResource("5_7lark")
sprite = NodePath("../Sprite2D2")
threshold = 0.125
multiplier = 0.008

[node name="Mars" parent="Game/Planets" node_paths=PackedStringArray("orbit_to") instance=ExtResource("3_77pxh")]
position = Vector2(33949, 1)
mass = 832.5
linear_velocity = Vector2(0, 90)
surface_gravity = 3.7
radius = 150.0
orbit_to = [NodePath("../Sun")]

[node name="Sprite2D" type="Sprite2D" parent="Game/Planets/Mars"]
position = Vector2(-2.9991, -9.0301e-06)
scale = Vector2(0.239062, 0.2375)
texture = ExtResource("7_57qao")

[node name="Sprite2D2" type="Sprite2D" parent="Game/Planets/Mars"]
position = Vector2(-2.9991, -9.0301e-06)
scale = Vector2(0.239062, 0.2375)
texture = ExtResource("7_57qao")

[node name="Zoom" type="Node2D" parent="Game/Planets/Mars" node_paths=PackedStringArray("sprite")]
script = ExtResource("5_7lark")
sprite = NodePath("../Sprite2D2")
threshold = 0.031
multiplier = 0.016

[node name="Jupiter" parent="Game/Planets" node_paths=PackedStringArray("orbit_to") instance=ExtResource("3_77pxh")]
position = Vector2(56692, 0)
mass = 62000.0
linear_velocity = Vector2(0, 70)
surface_gravity = 24.8
radius = 500.0
orbit_to = [NodePath("../Sun")]

[node name="Sprite2D" type="Sprite2D" parent="Game/Planets/Jupiter"]
position = Vector2(-1.99857, 2.99998)
scale = Vector2(0.798438, 0.832812)
texture = ExtResource("8_xtdlo")

[node name="Sprite2D2" type="Sprite2D" parent="Game/Planets/Jupiter"]
position = Vector2(-1.99857, 2.99998)
scale = Vector2(0.798438, 0.832812)
texture = ExtResource("8_xtdlo")

[node name="Zoom" type="Node2D" parent="Game/Planets/Jupiter" node_paths=PackedStringArray("sprite")]
script = ExtResource("5_7lark")
sprite = NodePath("../Sprite2D2")
threshold = 0.016
multiplier = 0.024

[node name="Asteroid" parent="Game/Planets/Jupiter" instance=ExtResource("15_361dc")]
position = Vector2(-5446, 0)

[node name="Asteroid3" parent="Game/Planets/Jupiter" instance=ExtResource("15_361dc")]
position = Vector2(7748, 8173)

[node name="Asteroid4" parent="Game/Planets/Jupiter" instance=ExtResource("15_361dc")]
position = Vector2(-1401, 15062)

[node name="Asteroid5" parent="Game/Planets/Jupiter" instance=ExtResource("15_361dc")]
position = Vector2(2183, -13738)

[node name="Europa" parent="Game/Planets" node_paths=PackedStringArray("orbit_to") instance=ExtResource("3_77pxh")]
position = Vector2(60512, 0)
mass = 231.5
surface_gravity = 2.315
radius = 100.0
orbit_to = [NodePath("../Sun"), NodePath("../Jupiter")]

[node name="Sprite2D" type="Sprite2D" parent="Game/Planets/Europa"]
position = Vector2(-0.00195312, 7.62939e-06)
scale = Vector2(0.157365, 0.16414)
texture = ExtResource("11_7jbma")

[node name="Sprite2D2" type="Sprite2D" parent="Game/Planets/Europa"]
position = Vector2(-0.00195312, 7.62939e-06)
scale = Vector2(0.157365, 0.16414)
texture = ExtResource("11_7jbma")

[node name="Zoom" type="Node2D" parent="Game/Planets/Europa" node_paths=PackedStringArray("sprite")]
script = ExtResource("5_7lark")
sprite = NodePath("../Sprite2D2")
threshold = 0.125
multiplier = 0.008

[node name="Saturn" parent="Game/Planets" node_paths=PackedStringArray("orbit_to") instance=ExtResource("3_77pxh")]
position = Vector2(82741, 0)
mass = 21060.0
linear_velocity = Vector2(0, 57.5)
surface_gravity = 10.4
radius = 450.0
orbit_to = [NodePath("../Sun")]

[node name="Sprite2D" type="Sprite2D" parent="Game/Planets/Saturn"]
position = Vector2(-1.00047, 3)
scale = Vector2(0.726562, 0.724219)
texture = ExtResource("9_oqo0b")

[node name="Sprite2D2" type="Sprite2D" parent="Game/Planets/Saturn"]
position = Vector2(-1.00047, 3)
scale = Vector2(0.726562, 0.724219)
texture = ExtResource("9_oqo0b")

[node name="Zoom" type="Node2D" parent="Game/Planets/Saturn" node_paths=PackedStringArray("sprite")]
script = ExtResource("5_7lark")
sprite = NodePath("../Sprite2D2")
threshold = 0.016
multiplier = 0.024

[node name="Asteroid" parent="Game/Planets/Saturn" instance=ExtResource("15_361dc")]
position = Vector2(-4430, -4042)

[node name="Asteroid2" parent="Game/Planets/Saturn" instance=ExtResource("15_361dc")]
position = Vector2(6339, -2837)

[node name="Asteroid3" parent="Game/Planets/Saturn" instance=ExtResource("15_361dc")]
position = Vector2(2548, 5537)

[node name="Asteroid4" parent="Game/Planets/Saturn" instance=ExtResource("15_361dc")]
position = Vector2(-5886, 2220)

[node name="Asteroid5" parent="Game/Planets/Saturn" instance=ExtResource("15_361dc")]
position = Vector2(-7040, -1943)

[node name="Asteroid6" parent="Game/Planets/Saturn" instance=ExtResource("15_361dc")]
position = Vector2(2328, -7419)

[node name="Titan" parent="Game/Planets" node_paths=PackedStringArray("orbit_to") instance=ExtResource("3_77pxh")]
position = Vector2(85490, 0)
mass = 237.2
surface_gravity = 2.372
radius = 100.0
orbit_to = [NodePath("../Saturn"), NodePath("../Sun")]

[node name="Sprite2D" type="Sprite2D" parent="Game/Planets/Titan"]
position = Vector2(-0.00195312, 7.62939e-06)
scale = Vector2(0.157365, 0.16414)
texture = ExtResource("12_7svse")

[node name="Sprite2D2" type="Sprite2D" parent="Game/Planets/Titan"]
position = Vector2(-0.00195312, 7.62939e-06)
scale = Vector2(0.157365, 0.16414)
texture = ExtResource("12_7svse")

[node name="Zoom" type="Node2D" parent="Game/Planets/Titan" node_paths=PackedStringArray("sprite")]
script = ExtResource("5_7lark")
sprite = NodePath("../Sprite2D2")
threshold = 0.125
multiplier = 0.008

[node name="Uranus" parent="Game/Planets" node_paths=PackedStringArray("orbit_to") instance=ExtResource("3_77pxh")]
position = Vector2(108490, 0)
mass = 9189.38
linear_velocity = Vector2(0, 52.5)
surface_gravity = 8.7
radius = 325.0
orbit_to = [NodePath("../Sun")]

[node name="Sprite2D" type="Sprite2D" parent="Game/Planets/Uranus"]
position = Vector2(1.00237, -4.76837e-07)
scale = Vector2(0.524804, 0.520117)
texture = ExtResource("10_0kv28")

[node name="Sprite2D2" type="Sprite2D" parent="Game/Planets/Uranus"]
position = Vector2(1.00237, -4.76837e-07)
scale = Vector2(0.524804, 0.520117)
texture = ExtResource("10_0kv28")

[node name="Zoom" type="Node2D" parent="Game/Planets/Uranus" node_paths=PackedStringArray("sprite")]
script = ExtResource("5_7lark")
sprite = NodePath("../Sprite2D2")
multiplier = 0.02

[node name="Neptune" parent="Game/Planets" node_paths=PackedStringArray("orbit_to") instance=ExtResource("3_77pxh")]
position = Vector2(134710, 0)
mass = 11264.0
linear_velocity = Vector2(0, 47.5)
surface_gravity = 11.0
radius = 320.0
orbit_to = [NodePath("../Sun")]

[node name="Sprite2D" type="Sprite2D" parent="Game/Planets/Neptune"]
scale = Vector2(0.525388, 0.512305)
texture = ExtResource("4_dtjij")

[node name="Sprite2D2" type="Sprite2D" parent="Game/Planets/Neptune"]
scale = Vector2(0.525388, 0.512305)
texture = ExtResource("4_dtjij")

[node name="Zoom" type="Node2D" parent="Game/Planets/Neptune" node_paths=PackedStringArray("sprite")]
script = ExtResource("5_7lark")
sprite = NodePath("../Sprite2D2")
multiplier = 0.02

[node name="Vehicle" parent="Game" node_paths=PackedStringArray("initial_planet", "camera") instance=ExtResource("4_3i4c4")]
position = Vector2(21976, -279)
mass = 1.0
custom_integrator = false
contact_monitor = true
max_contacts_reported = 1
angular_damp_mode = 0
initial_planet = NodePath("../Planets/Earth")
camera = NodePath("../../Camera2D")

[node name="Router" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
process_mode = 3
process_priority = 1
process_physics_priority = 1
script = ExtResource("9_1876u")
initial_state = NodePath("Home")
default_data = {
"duration": 60,
"mission": "Mars",
"name": "Dummy"
}

[node name="Home" type="Node" parent="Router" node_paths=PackedStringArray("ui_control")]
script = ExtResource("10_dxws8")
ui_control = NodePath("../../UserInterface/UIControl")

[node name="Lobby" type="Node" parent="Router" node_paths=PackedStringArray("ui_control")]
script = ExtResource("11_g0oy0")
ui_control = NodePath("../../UserInterface/UIControl")

[node name="Mission" type="Node" parent="Router" node_paths=PackedStringArray("ui_control")]
script = ExtResource("7_82i05")
ui_control = NodePath("../../UserInterface/UIControl")

[node name="Game" type="Node" parent="Router" node_paths=PackedStringArray("galaxy_texture", "ui_control", "game_control", "simulation", "camera_2d")]
script = ExtResource("8_v4xeu")
galaxy_texture = NodePath("../../CanvasLayer/TextureRect")
ui_control = NodePath("../../UserInterface/UIControl")
game_control = NodePath("../../UserInterface/GameControl")
simulation = NodePath("../../Game")
camera_2d = NodePath("../../Camera2D")

[node name="Leaderboard" type="Node" parent="Router" node_paths=PackedStringArray("ui_control", "database")]
script = ExtResource("24_150wo")
ui_control = NodePath("../../UserInterface/UIControl")
database = NodePath("../../Database")

[node name="UserInterface" type="CanvasLayer" parent="."]
process_mode = 3
layer = 2

[node name="UIControl" parent="UserInterface" instance=ExtResource("9_yyfp1")]
visible = false

[node name="GameControl" parent="UserInterface" instance=ExtResource("11_o1cve")]
visible = false

[node name="Database" type="Node" parent="."]
script = ExtResource("26_lotpi")

[connection signal="timeout" from="Game/WinTimer" to="Router/Game" method="_on_win_timer_timeout"]
[connection signal="body_shape_entered" from="Game/Vehicle" to="Router/Game" method="_on_vehicle_body_shape_entered"]
[connection signal="gear_value_changed" from="UserInterface/GameControl" to="Game/Vehicle" method="_on_game_control_gear_value_changed"]
[connection signal="quit" from="UserInterface/GameControl" to="Router/Game" method="_on_game_control_quit"]
